PostGIS 3.2.6dev
2023/xx/xx

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes and Enhancements *
  - #5548, Fix box-filtered validity check of topologies with edge-less faces
           (Sandro Santilli)
  - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
           (Sandro Santilli)
  - #5450, Fix macro expansion recursion on powerpc architectures.
           (Bas Couwenberg)
  - #5403, [postgis_topology] Fix ValidateTopology(bbox)
           without topology in search_path (Sandro Santilli)
  - #5410, [postgis_raster] ST_Value bilinear resample,
           don't throw an error if Band has no NODATA value
           (Regina Obe)
  - #5385, Postgres malloc assertion fail when
           using pg_cancel_backend with ST_AsMVT
           (Regina Obe, Paul Ramsey)
 - Fix JsonB casting issue (Paul Ramsey)


* Breaking Changes *
    - #5385, Take out interruptability of ST_AsMVT
             as it causes backend crash under intense conditions
            (Regina Obe, Paul Ramsey)


PostGIS 3.2.5
2023/05/29

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes *
  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5380, Fix 2.5 upgrades with views using geography based ST_Distance
           (Sandro Santilli)
  - #5106, Fix segfault in ST_RemEdgeNewFace/ST_RemEdgeModFace
           when no edge side-faces are found (Sandro Santilli)
  - #5313, Fix memory access issue in ST_InterpolateRaster (Paul Ramsey)
  - #5338, Dump/Restore of raster table fails on
           enforce_coverage_tile_rast constraint (Regina Obe)